<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.activity.MyActivity">
    <TextView
        android:text="@string/hello_world"
        android:id="@android:id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@android:id/button1"
        android:text="@string/rc_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@android:id/button2"
        android:text="@string/rc_app_self_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@android:id/button3"
        android:text="@string/rc_app_conversationlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@android:id/copy"
        android:text="@string/rc_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@android:id/closeButton"
        android:text="@string/rc_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@android:id/background"
        android:text="send location message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <fragment
        android:id="@+id/rc_set_conversation_to_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:name="io.rong.imkit.fragment.SetConversationToTopFragment"/>

    <fragment
        android:id="@+id/rc_set_conversation_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:name="io.rong.imkit.fragment.SetConversationNotificationFragment"/>

    <io.rong.imkit.widget.AsyncImageView
        android:id="@android:id/icon"
        app:RCDefDrawable="@drawable/ic_rongcloud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
