<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorViewBg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTitleBar">

        <TextView
            android:id="@+id/activity_login_tv_login"
            style="@style/title_tv_style"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/str_login" />
    </RelativeLayout>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="25dp"
        android:src="@mipmap/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:orientation="vertical"
        android:padding="5dp">

        <EditText
            android:id="@+id/activity_login_et_name"
            style="@style/edit_style"
            android:drawableLeft="@mipmap/dl_shoujihao"
            android:hint="@string/et_login_name"
            android:inputType="phone" />

        <TextView
            style="@style/divide_line"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" />

        <EditText
            android:id="@+id/activity_login_et_pwd"
            style="@style/edit_style"
            android:drawableLeft="@mipmap/dl_mima"
            android:hint="@string/et_login_pwd"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/activity_login_btn_login"
        style="@style/btn_login"
        android:text="@string/str_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/activity_login_tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/str_forget_pwd"
            android:textColor="#999999"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_no_account"
            android:textColor="#999999"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/activity_login_tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="15dp"
            android:text="@string/str_register"
            android:textColor="#FF7800"
            android:textSize="12sp" />

    </LinearLayout>
</LinearLayout>