<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorViewBg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTitleBar"
        >

        <ImageView
            style="@style/title_iv_back"
            android:id="@+id/activity_change_iv_back" />

        <TextView
            android:id="@+id/activity_change_tv_forget"
            android:text="@string/str_change_pwd"
            style="@style/title_tv_style"
            />
    </RelativeLayout>


    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:background="@color/color_white">

        <EditText
            android:hint="@string/et_input_pwd"
            style="@style/edit_style"
            android:drawableLeft="@mipmap/dl_mima"
            android:inputType="phone"
            />
        <TextView
            style="@style/divide_line"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>
        <EditText
            android:hint="@string/et_input_again"
            style="@style/edit_style"
            android:drawableLeft="@mipmap/chongzhimima"
            android:inputType="phone"
            />



    </LinearLayout>

    <Button
        android:id="@+id/activity_change_btn_ensure"
        style="@style/btn_login"
        android:text="确定"
        />

</LinearLayout>