<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorViewBg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTitleBar">

        <ImageView
            android:id="@+id/activity_register_iv_back"
            style="@style/title_iv_back" />

        <TextView
            android:id="@+id/activity_register_tv_register"
            style="@style/title_tv_style"
            android:text="@string/str_register_title" />
    </RelativeLayout>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="25dp"
        android:src="@mipmap/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:orientation="vertical"
        android:padding="5dp">

        <EditText
            android:id="@+id/activity_register_et_mobile"
            style="@style/edit_style"
            android:drawableLeft="@mipmap/dl_shoujihao"
            android:hint="@string/et_login_name"
            android:inputType="phone" />

        <TextView
            style="@style/divide_line"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/activity_register_et_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:drawablePadding="5dp"
                android:background="@null"
                android:textColorHint="#D3D3D3"
                android:textSize="@dimen/content_tv_size"
                android:hint="@string/et_check_num"
                android:drawableLeft="@mipmap/yanzhengma"
                />

            <TextView
                style="@style/divide_line_02"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"/>

            <TextView
                android:id="@+id/activity_register_tv_getcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/content_tv_size"
                android:text="获取验证码"
                android:textColor="#999999"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginLeft="5dp"
                android:background="#EEEEEE"
                />

        </LinearLayout>


        <TextView
            style="@style/divide_line"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" />
        <EditText
            android:id="@+id/activity_register_et_pwd"
            style="@style/edit_style"
            android:drawableLeft="@mipmap/dl_mima"
            android:hint="@string/et_login_pwd"
            android:inputType="textPassword" />

        <TextView
            style="@style/divide_line"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" />
        <EditText
            android:id="@+id/activity_register_et_carnum"
            style="@style/edit_style"
            android:drawableLeft="@mipmap/chepai"
            android:hint="请输入车牌号"
             />
        <TextView
            style="@style/divide_line"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" />

        <EditText
            android:id="@+id/activity_register_et_cartype"
            style="@style/edit_style"
            android:drawableLeft="@mipmap/chexing"
            android:hint="请输入车型"
            />

    </LinearLayout>

    <Button
        android:id="@+id/activity_register_btn_register"
        style="@style/btn_login"
        android:text="@string/str_register_title" />


</LinearLayout>